Hopefully prevent selection on safari

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,17 @@
 #root {
   max-width: 1280px;
-  width: 100%;
+  width: 100dvw;
+  height: 100dvh;
   margin: 0 auto;
+
+  touch-action: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  outline: none;
 
   text-align: center;
   text-transform: uppercase;
